--- a/simpleGAN/simpleGAN.ipynb
+++ b/simpleGAN/simpleGAN.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,105 +56,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
-    "lr = 3e-4\n",
+    "lr = 1e-5\n",
     "z_dim = 64\n",
     "image_dim = 28*28*1\n",
-    "batch_size = 32\n",
+    "batch_size = 64\n",
     "num_epochs = 50"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Downloading http://yann.lecun.com/exdb/mnist/train-images-idx3-ubyte.gz\n",
-      "Downloading http://yann.lecun.com/exdb/mnist/train-images-idx3-ubyte.gz to dataset/MNIST\\raw\\train-images-idx3-ubyte.gz\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 9912422/9912422 [01:19<00:00, 123966.08it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Extracting dataset/MNIST\\raw\\train-images-idx3-ubyte.gz to dataset/MNIST\\raw\n",
-      "\n",
-      "Downloading http://yann.lecun.com/exdb/mnist/train-labels-idx1-ubyte.gz\n",
-      "Downloading http://yann.lecun.com/exdb/mnist/train-labels-idx1-ubyte.gz to dataset/MNIST\\raw\\train-labels-idx1-ubyte.gz\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 28881/28881 [00:00<00:00, 54092.20it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Extracting dataset/MNIST\\raw\\train-labels-idx1-ubyte.gz to dataset/MNIST\\raw\n",
-      "\n",
-      "Downloading http://yann.lecun.com/exdb/mnist/t10k-images-idx3-ubyte.gz\n",
-      "Downloading http://yann.lecun.com/exdb/mnist/t10k-images-idx3-ubyte.gz to dataset/MNIST\\raw\\t10k-images-idx3-ubyte.gz\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 1648877/1648877 [00:16<00:00, 99005.19it/s] \n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Extracting dataset/MNIST\\raw\\t10k-images-idx3-ubyte.gz to dataset/MNIST\\raw\n",
-      "\n",
-      "Downloading http://yann.lecun.com/exdb/mnist/t10k-labels-idx1-ubyte.gz\n",
-      "Downloading http://yann.lecun.com/exdb/mnist/t10k-labels-idx1-ubyte.gz to dataset/MNIST\\raw\\t10k-labels-idx1-ubyte.gz\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 4542/4542 [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Extracting dataset/MNIST\\raw\\t10k-labels-idx1-ubyte.gz to dataset/MNIST\\raw\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "discriminator = Discriminator(image_dim).to(device)\n",
     "generator = Generator(z_dim, image_dim).to(device)\n",
@@ -174,6 +92,23 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<torch.utils.data.dataloader.DataLoader object at 0x0000020E74AB2AF0>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(loader)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
    "outputs": [
@@ -181,56 +116,56 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch [0/50] Batch 0/1875                       Loss D: 0.5309, loss G: 0.6450\n",
-      "Epoch [1/50] Batch 0/1875                       Loss D: 0.0744, loss G: 2.6749\n",
-      "Epoch [2/50] Batch 0/1875                       Loss D: 0.0327, loss G: 3.8955\n",
-      "Epoch [3/50] Batch 0/1875                       Loss D: 0.0397, loss G: 3.7457\n",
-      "Epoch [4/50] Batch 0/1875                       Loss D: 0.0356, loss G: 4.4808\n",
-      "Epoch [5/50] Batch 0/1875                       Loss D: 0.0569, loss G: 5.5115\n",
-      "Epoch [6/50] Batch 0/1875                       Loss D: 0.0138, loss G: 6.3366\n",
-      "Epoch [7/50] Batch 0/1875                       Loss D: 0.0083, loss G: 5.2438\n",
-      "Epoch [8/50] Batch 0/1875                       Loss D: 0.0293, loss G: 5.7426\n",
-      "Epoch [9/50] Batch 0/1875                       Loss D: 0.0415, loss G: 5.4944\n",
-      "Epoch [10/50] Batch 0/1875                       Loss D: 0.0074, loss G: 5.3813\n",
-      "Epoch [11/50] Batch 0/1875                       Loss D: 0.0103, loss G: 5.4017\n",
-      "Epoch [12/50] Batch 0/1875                       Loss D: 0.0183, loss G: 5.6035\n",
-      "Epoch [13/50] Batch 0/1875                       Loss D: 0.0415, loss G: 5.4884\n",
-      "Epoch [14/50] Batch 0/1875                       Loss D: 0.0293, loss G: 6.2619\n",
-      "Epoch [15/50] Batch 0/1875                       Loss D: 0.0198, loss G: 7.8525\n",
-      "Epoch [16/50] Batch 0/1875                       Loss D: 0.0118, loss G: 5.7716\n",
-      "Epoch [17/50] Batch 0/1875                       Loss D: 0.0338, loss G: 4.6172\n",
-      "Epoch [18/50] Batch 0/1875                       Loss D: 0.0081, loss G: 5.4482\n",
-      "Epoch [19/50] Batch 0/1875                       Loss D: 0.0080, loss G: 5.7633\n",
-      "Epoch [20/50] Batch 0/1875                       Loss D: 0.0102, loss G: 6.7311\n",
-      "Epoch [21/50] Batch 0/1875                       Loss D: 0.0014, loss G: 8.2049\n",
-      "Epoch [22/50] Batch 0/1875                       Loss D: 0.0983, loss G: 6.2431\n",
-      "Epoch [23/50] Batch 0/1875                       Loss D: 0.0123, loss G: 7.2245\n",
-      "Epoch [24/50] Batch 0/1875                       Loss D: 0.0027, loss G: 7.0806\n",
-      "Epoch [25/50] Batch 0/1875                       Loss D: 0.0012, loss G: 8.1612\n",
-      "Epoch [26/50] Batch 0/1875                       Loss D: 0.0024, loss G: 7.5183\n",
-      "Epoch [27/50] Batch 0/1875                       Loss D: 0.0131, loss G: 6.1722\n",
-      "Epoch [28/50] Batch 0/1875                       Loss D: 0.0018, loss G: 7.8423\n",
-      "Epoch [29/50] Batch 0/1875                       Loss D: 0.0096, loss G: 6.2917\n",
-      "Epoch [30/50] Batch 0/1875                       Loss D: 0.0047, loss G: 7.6391\n",
-      "Epoch [31/50] Batch 0/1875                       Loss D: 0.0010, loss G: 9.0584\n",
-      "Epoch [32/50] Batch 0/1875                       Loss D: 0.0009, loss G: 7.9959\n",
-      "Epoch [33/50] Batch 0/1875                       Loss D: 0.0021, loss G: 7.3921\n",
-      "Epoch [34/50] Batch 0/1875                       Loss D: 0.0008, loss G: 9.4095\n",
-      "Epoch [35/50] Batch 0/1875                       Loss D: 0.0430, loss G: 8.4803\n",
-      "Epoch [36/50] Batch 0/1875                       Loss D: 0.0003, loss G: 8.9590\n",
-      "Epoch [37/50] Batch 0/1875                       Loss D: 0.0133, loss G: 8.1374\n",
-      "Epoch [38/50] Batch 0/1875                       Loss D: 0.0032, loss G: 7.8647\n",
-      "Epoch [39/50] Batch 0/1875                       Loss D: 0.0008, loss G: 7.8863\n",
-      "Epoch [40/50] Batch 0/1875                       Loss D: 0.0034, loss G: 7.2809\n",
-      "Epoch [41/50] Batch 0/1875                       Loss D: 0.0010, loss G: 8.9629\n",
-      "Epoch [42/50] Batch 0/1875                       Loss D: 0.0048, loss G: 8.6083\n",
-      "Epoch [43/50] Batch 0/1875                       Loss D: 0.0002, loss G: 9.1816\n",
-      "Epoch [44/50] Batch 0/1875                       Loss D: 0.0001, loss G: 9.8959\n",
-      "Epoch [45/50] Batch 0/1875                       Loss D: 0.0016, loss G: 7.6672\n",
-      "Epoch [46/50] Batch 0/1875                       Loss D: 0.0017, loss G: 9.3570\n",
-      "Epoch [47/50] Batch 0/1875                       Loss D: 0.0007, loss G: 9.4857\n",
-      "Epoch [48/50] Batch 0/1875                       Loss D: 0.0041, loss G: 8.3392\n",
-      "Epoch [49/50] Batch 0/1875                       Loss D: 0.0014, loss G: 7.9249\n"
+      "Epoch [0/50] Batch 0/938                       Loss D: 0.6777, loss G: 0.7149\n",
+      "Epoch [1/50] Batch 0/938                       Loss D: 0.5810, loss G: 0.5340\n",
+      "Epoch [2/50] Batch 0/938                       Loss D: 0.5731, loss G: 0.5959\n",
+      "Epoch [3/50] Batch 0/938                       Loss D: 0.4914, loss G: 0.7129\n",
+      "Epoch [4/50] Batch 0/938                       Loss D: 0.4439, loss G: 0.7478\n",
+      "Epoch [5/50] Batch 0/938                       Loss D: 0.4382, loss G: 0.7174\n",
+      "Epoch [6/50] Batch 0/938                       Loss D: 0.4441, loss G: 0.6634\n",
+      "Epoch [7/50] Batch 0/938                       Loss D: 0.4113, loss G: 0.7378\n",
+      "Epoch [8/50] Batch 0/938                       Loss D: 0.3947, loss G: 0.8238\n",
+      "Epoch [9/50] Batch 0/938                       Loss D: 0.3806, loss G: 0.8613\n",
+      "Epoch [10/50] Batch 0/938                       Loss D: 0.3734, loss G: 0.8804\n",
+      "Epoch [11/50] Batch 0/938                       Loss D: 0.3594, loss G: 0.9177\n",
+      "Epoch [12/50] Batch 0/938                       Loss D: 0.3370, loss G: 1.0074\n",
+      "Epoch [13/50] Batch 0/938                       Loss D: 0.3257, loss G: 1.0242\n",
+      "Epoch [14/50] Batch 0/938                       Loss D: 0.3060, loss G: 1.0897\n",
+      "Epoch [15/50] Batch 0/938                       Loss D: 0.3208, loss G: 1.1144\n",
+      "Epoch [16/50] Batch 0/938                       Loss D: 0.2968, loss G: 1.1983\n",
+      "Epoch [17/50] Batch 0/938                       Loss D: 0.2753, loss G: 1.2694\n",
+      "Epoch [18/50] Batch 0/938                       Loss D: 0.2394, loss G: 1.3596\n",
+      "Epoch [19/50] Batch 0/938                       Loss D: 0.2598, loss G: 1.3843\n",
+      "Epoch [20/50] Batch 0/938                       Loss D: 0.2011, loss G: 1.5317\n",
+      "Epoch [21/50] Batch 0/938                       Loss D: 0.2033, loss G: 1.5715\n",
+      "Epoch [22/50] Batch 0/938                       Loss D: 0.1876, loss G: 1.6598\n",
+      "Epoch [23/50] Batch 0/938                       Loss D: 0.1793, loss G: 1.7209\n",
+      "Epoch [24/50] Batch 0/938                       Loss D: 0.1670, loss G: 1.7786\n",
+      "Epoch [25/50] Batch 0/938                       Loss D: 0.1611, loss G: 1.7673\n",
+      "Epoch [26/50] Batch 0/938                       Loss D: 0.1615, loss G: 1.8241\n",
+      "Epoch [27/50] Batch 0/938                       Loss D: 0.1856, loss G: 1.8574\n",
+      "Epoch [28/50] Batch 0/938                       Loss D: 0.1349, loss G: 2.0517\n",
+      "Epoch [29/50] Batch 0/938                       Loss D: 0.1457, loss G: 2.0242\n",
+      "Epoch [30/50] Batch 0/938                       Loss D: 0.1334, loss G: 2.0851\n",
+      "Epoch [31/50] Batch 0/938                       Loss D: 0.1239, loss G: 2.0632\n",
+      "Epoch [32/50] Batch 0/938                       Loss D: 0.1203, loss G: 2.1176\n",
+      "Epoch [33/50] Batch 0/938                       Loss D: 0.1273, loss G: 2.2937\n",
+      "Epoch [34/50] Batch 0/938                       Loss D: 0.1036, loss G: 2.3855\n",
+      "Epoch [35/50] Batch 0/938                       Loss D: 0.0900, loss G: 2.4614\n",
+      "Epoch [36/50] Batch 0/938                       Loss D: 0.1017, loss G: 2.4792\n",
+      "Epoch [37/50] Batch 0/938                       Loss D: 0.1026, loss G: 2.4555\n",
+      "Epoch [38/50] Batch 0/938                       Loss D: 0.1033, loss G: 2.5777\n",
+      "Epoch [39/50] Batch 0/938                       Loss D: 0.0979, loss G: 2.6407\n",
+      "Epoch [40/50] Batch 0/938                       Loss D: 0.1099, loss G: 2.5041\n",
+      "Epoch [41/50] Batch 0/938                       Loss D: 0.1188, loss G: 2.6664\n",
+      "Epoch [42/50] Batch 0/938                       Loss D: 0.1088, loss G: 2.6294\n",
+      "Epoch [43/50] Batch 0/938                       Loss D: 0.0866, loss G: 2.5458\n",
+      "Epoch [44/50] Batch 0/938                       Loss D: 0.0904, loss G: 2.5419\n",
+      "Epoch [45/50] Batch 0/938                       Loss D: 0.1070, loss G: 2.5663\n",
+      "Epoch [46/50] Batch 0/938                       Loss D: 0.0923, loss G: 2.8289\n",
+      "Epoch [47/50] Batch 0/938                       Loss D: 0.0747, loss G: 2.6186\n",
+      "Epoch [48/50] Batch 0/938                       Loss D: 0.1073, loss G: 2.8661\n",
+      "Epoch [49/50] Batch 0/938                       Loss D: 0.0648, loss G: 2.7683\n"
      ]
     }
    ],
