--- a/DCGAN/DCGAN.ipynb
+++ b/DCGAN/DCGAN.ipynb
@@ -243,7 +243,10 @@
       "Epoch [1/5] Batch 200/469                   Loss D: 0.0000, loss G: 11.9477\n",
       "Epoch [1/5] Batch 300/469                   Loss D: 0.0000, loss G: 11.8648\n",
       "Epoch [1/5] Batch 400/469                   Loss D: 0.0000, loss G: 12.5431\n",
-      "Epoch [2/5] Batch 0/469                   Loss D: 0.0000, loss G: 12.1111\n"
+      "Epoch [2/5] Batch 0/469                   Loss D: 0.0000, loss G: 12.1111\n",
+      "Epoch [2/5] Batch 100/469                   Loss D: 0.0000, loss G: 12.7781\n",
+      "Epoch [2/5] Batch 200/469                   Loss D: 0.0000, loss G: 12.8821\n",
+      "Epoch [2/5] Batch 300/469                   Loss D: 0.0000, loss G: 13.1882\n"
      ]
     }
    ],
