--- a/VAE/VAE.ipynb
+++ b/VAE/VAE.ipynb
@@ -4,7 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# VAE from scartch on MNIST"
+    "# VAE from scartch on MNIST\n",
+    "--- "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Author : Tariq Chellali\n",
+    "- Update date: 12/02/2024"
    ]
   },
   {
@@ -294,6 +303,31 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### DIVERGENCE de Kullback-Leibler (KL) \n",
+    "\n",
+    "La divergence de Kullback-Leibler (KL) mesure la différence entre deux distributions de probabilité. Dans le contexte des Variational Autoencoders (VAEs), la KL est utilisée pour comparer deux distributions : la distribution postérieure $\\(q(z | x)\\)$ et la distribution a priori $\\(p(z)\\)$ dans l'espace latent.\n",
+    "\n",
+    "- **Distribution Postérieure $\\(q(z | x)\\)$ :** C'est la distribution des variables latentes $\\(z\\)$ compte tenu des données d'entrée $\\(x\\)$. Elle est calculée par l'encodeur du VAE.\n",
+    "\n",
+    "- **Distribution a Priori $\\(p(z)\\)$ :** C'est la distribution a priori des variables latentes. En d'autres termes, c'est l'idée de la distribution que nous souhaitons pour $\\(z\\)$ avant de voir les données.\n",
+    "\n",
+    "La KL mesure à quel point la distribution postérieure ($\\(q(z | x)\\)$) est différente de la distribution a priori ($\\(p(z)\\)$). Si la KL est grande, cela signifie que ces deux distributions sont très différentes.\n",
+    "\n",
+    "**Objectif de la KL dans les VAEs :**\n",
+    "- L'objectif est d'encourager la distribution postérieure à être similaire à la distribution a priori dans l'espace latent.\n",
+    "- Cela régularise l'espace latent en forçant les représentations des données à suivre une certaine structure ou organisation, plutôt que d'être arbitraires.\n",
+    "\n",
+    "**En termes simples :**\n",
+    "- On veut que les $\\(z\\)$ générés à partir des données d'entrée soient similaires à des $\\(z\\)$ que nous choisirions même sans avoir vu les données.\n",
+    "- Cela permet au modèle de mieux généraliser et d'apprendre des représentations utiles plutôt que de mémoriser simplement les données d'entraînement.\n",
+    "\n",
+    "En résumé, la KL dans les VAEs est une régularisation qui guide le modèle à construire des représentations latentes qui respectent une certaine structure a priori, plutôt que d'être trop spécifiques aux données d'entraînement. Cela aide le modèle à apprendre des représentations générales et à mieux gérer de nouvelles données."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 54,
    "metadata": {},
@@ -411,6 +445,75 @@
    "source": [
     "for idx in range(10):\n",
     "    inference(idx, num_examples=1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Les Variational Autoencoders (VAE) présentent certaines limites, tant du point de vue théorique que pratique. Voici quelques-unes des limites les plus couramment discutées :\n",
+    "\n",
+    "### Limites Théoriques :\n",
+    "\n",
+    "1. **Approximation de l'inference :** Les VAE reposent sur des approximations pour l'inférence de la distribution latente. L'utilisation de la divergence de Kullback-Leibler (KL) pour mesurer la différence entre la distribution latente et une distribution cible introduit une approximation qui peut ne pas être parfaite.\n",
+    "\n",
+    "2. **Hypothèses Gaussiennes :** Les VAE supposent souvent que la distribution latente suit une distribution gaussienne. Cette hypothèse peut ne pas être toujours réaliste pour des données réelles.\n",
+    "\n",
+    "3. **Dépendance aux hyperparamètres :** Les performances des VAE peuvent dépendre fortement des choix des hyperparamètres tels que la dimension de la distribution latente, le poids relatif de la divergence KL dans la fonction de perte, etc. Trouver de bons hyperparamètres peut être une tâche délicate.\n",
+    "\n",
+    "### Limites Pratiques :\n",
+    "\n",
+    "1. **Perte de détails :** Les VAE peuvent avoir tendance à produire des reconstructions lisses et à perdre certains détails fins des données d'entrée. Cela est souvent dû à la régularisation introduite par la divergence KL.\n",
+    "\n",
+    "2. **Sensibilité aux paramètres :** La performance des VAE peut être sensible aux choix des paramètres, en particulier en ce qui concerne la dimension de la distribution latente et les termes de régularisation.\n",
+    "\n",
+    "3. **Mode Collapse :** Les VAE peuvent être sujets au phénomène de \"mode collapse\", où le modèle génère des échantillons qui se concentrent sur quelques modes dominants dans les données d'entraînement, ignorant ainsi la diversité des données.\n",
+    "\n",
+    "4. **Difficulté de l'apprentissage :** L'apprentissage d'un VAE peut être plus complexe que celui d'autres modèles génératifs, et il peut nécessiter des techniques avancées pour stabiliser l'entraînement.\n",
+    "\n",
+    "5. **Interprétabilité Limitée :** Comprendre la signification précise des dimensions latentes peut être difficile, en particulier si la dimension de la distribution latente est élevée.\n",
+    "\n",
+    "Malgré ces limites, les VAE restent une méthode puissante pour la génération d'échantillons et l'apprentissage de représentations utiles, notamment en raison de leur capacité à effectuer une régularisation sur la distribution latente et à gérer des données incomplètes. Les recherches en cours visent à atténuer certaines de ces limitations et à explorer des variantes améliorées des VAE."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "--------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Pour surmonter les limites des Variational Autoencoders (VAE), différentes approches peuvent être explorées. Voici quelques stratégies couramment utilisées :\n",
+    "\n",
+    "### Surmonter les Limites Théoriques :\n",
+    "\n",
+    "1. **Variante de la Divergence KL :** Des variantes de la divergence de Kullback-Leibler (KL) peuvent être utilisées pour rendre l'inférence plus précise, par exemple en utilisant une forme analytique lorsque cela est possible.\n",
+    "\n",
+    "2. **Distributions Latentes Plus Complexes :** Explorer des distributions latentes plus complexes au lieu de supposer une distribution gaussienne peut aider à mieux modéliser la structure des données. Des distributions latentes plus flexibles peuvent être utilisées, par exemple, en utilisant des distributions multi-modales.\n",
+    "\n",
+    "3. **Considération des Dépendances Temporelles :** Pour des données séquentielles, l'extension des VAE pour prendre en compte les dépendances temporelles peut améliorer la modélisation des dynamiques temporelles.\n",
+    "\n",
+    "### Surmonter les Limites Pratiques :\n",
+    "\n",
+    "1. **Utilisation d'Architectures Plus Complexes :** Des architectures de modèles plus complexes, telles que des VAE hiérarchiques, peuvent être explorées pour capturer des structures plus complexes dans les données.\n",
+    "\n",
+    "2. **Augmentation de la Taille de la Distribution Latente :** L'augmentation de la dimension de la distribution latente peut permettre une représentation plus expressive des données, mais cela doit être fait avec prudence pour éviter des problèmes tels que le surajustement.\n",
+    "\n",
+    "3. **Techniques d'Entraînement Avancées :** L'utilisation de techniques d'entraînement avancées, telles que l'entraînement adversarial, peut aider à stabiliser l'entraînement et à améliorer la qualité des échantillons générés.\n",
+    "\n",
+    "4. **Stratégies de Régularisation Alternatives :** En plus de la divergence KL, d'autres stratégies de régularisation peuvent être explorées pour éviter la perte de détails dans les reconstructions, comme l'utilisation de termes de régularisation spécifiques.\n",
+    "\n",
+    "5. **Utilisation de Modèles Génératifs Alternatifs :** En fonction de la tâche, d'autres modèles génératifs tels que les GANs (Generative Adversarial Networks) peuvent être considérés comme une alternative aux VAE, avec leurs avantages et inconvénients propres.\n",
+    "\n",
+    "6. **Recherche sur les Hyperparamètres :** La recherche minutieuse des hyperparamètres, y compris la dimension de la distribution latente, le poids relatif de la divergence KL, etc., est cruciale pour obtenir de bonnes performances.\n",
+    "\n",
+    "7. **Ensemble de Modèles :** L'utilisation d'ensembles de modèles ou d'approches d'apprentissage en plusieurs étapes peut améliorer la robustesse du modèle et réduire la sensibilité aux choix des hyperparamètres.\n",
+    "\n",
+    "En pratique, il n'y a pas de solution unique pour surmonter toutes les limitations, et le choix des stratégies dépend souvent de la tâche spécifique et des caractéristiques des données. Les chercheurs continuent d'explorer de nouvelles variantes et approches pour améliorer la capacité des VAE à modéliser des données complexes."
    ]
   }
  ],
